第二番 一旦添削終了

--- a/chapter6.tex
+++ b/chapter6.tex
@@ -9,9 +9,9 @@
 
 次に，「クエリの関連文書を用いたクエリ尤度モデルの拡張」では，論文を用いたときに，MAP値の向上が見られた．しかし，Web文書を用いたときは，MAP値にあまり変化が見られなかった．これは，Web文書がNTCIR11のクエリに対して，スムージングを行なえなかったためであると推察できる．論文を用いると，専門単語も広く言語モデルとして含められるため，スムージングできる可能性が高くなり，MAP値が上昇したのだと考えられる．
 
-そして，「文脈を考慮した言語特徴量の検討」では，キャッシュモデルを適応したときに，MAP値の向上が見られた．しかし，N-gramモデルやリカレントニューラルネットワーク言語モデルを適用した場合に精度が低下した．
+そして，「文脈を考慮した言語特徴量の検討」では，キャッシュモデルを適応したときに，MAP値の向上が見られた．しかし，N-gram言語モデルやリカレントニューラルネットワーク言語モデルを適用した場合に精度が低下した．
 % TODO: とても怪しい、アルゴリズムから見直した方が良い
-N-gramモデルは，スムージングを行なっているが，uni-gramに比較して欠損している割合が高いため，欠損する場合に不確定な情報は挿入されてしまい，MAP値が減少してしまうことが考えられる．
+N-gram言語モデルは，スムージングを行なっているが，uni-gramに比較して欠損している割合が高いため，欠損する場合に不確定な情報は挿入されてしまい，MAP値が減少してしまうことが考えられる．
 リカレントニューラルネットワーク言語モデルは，講義単位で文脈を保持している．そのため，保持する情報が長過ぎることがMAP値の減少を引き起こしていると推察できる．キャッシュモデルにおいて，単語履歴の長さが長過ぎる場合に，MAP値が減少することが確認されており，リカレントニューラルネットワーク言語モデルも同様に，この現象が起こっていると考えられる．
 
 また，「前後の部分文書の情報の加味」では，精度を大幅に向上することを確認した．今回のSpokenQuery\&Docは，1つのクエリに対する正解文書が，1箇所に固まっていることが多かったため，特に効果が大きかったと考えられる．
