--- a/main.tex
+++ b/main.tex
@@ -261,8 +261,10 @@ from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
 北 研二，言語と計算 確率的言語モデル，東京大学出版，東京，1999．
 
 \bibitem{hasegawa}
-北 研二，言語と計算 確率的言語モデル，東京大学出版，東京，1999．
 Kiichi Hasegawa, Masanori Takehara, Satoshi Tamura, Satoru Hayamizu, Spoken document retrieval using extended query model and web documents, Proceeding of the 10th NTCIR Conference, June 18-21, 2013
+
+\bibitem{kanetera}
+金寺 登, 長田 忠良, シーン間音声情報内容検索, 日本音響学会, 1-2-9, 2015
 
 % \bibitem{BM25}
 % S. Robertson and H. Zaragoza, 
