--- a/thanks.tex
+++ b/thanks.tex
@@ -2,13 +2,14 @@
 % 上記のことを満たしながら，目次は出す #-> \addcontentsline
 \chapter*{謝辞}
 \addcontentsline{toc}{chapter}{謝辞}
-% 本稿をまとめるにあたり，多くの方々のお世話になりました．以下に感謝の意を表します．\\
+本稿をまとめるにあたり，多くの方々のお世話になりました．以下に感謝の意を表します．
 
 % % 先生方
-% 本研究のテーマを与えてくださり，温かいご指導を賜った，速水 悟教授，田村 哲嗣助教に深く感謝致します．
-% 速水 悟教授には，研究の方針に関して普段から厳しく，かつ的確なご指導を頂きました．
-% 田村 哲嗣助教には，研究の方針はもちろんのこと，研究の進捗に気を配って頂きました．
-% お二人のバックアップがなければ，本稿をまとめられることはありませんでした．\\
+本研究のテーマを与えてくださり，温かいご指導を賜った，速水 悟教授，田村 哲嗣助教に深く感謝致します．
+速水 悟教授には，研究の方針に関して普段から厳しく，かつ的確なご指導を頂きました．
+田村 哲嗣助教には，研究の方針はもちろんのこと，研究の進捗に気を配って頂きました．
+お二人のバックアップがなければ，本稿をまとめられることはありませんでした．
+
 
 % % 研究に深く関わってくれた人
 % 次に研究の過程で，度々議論を交わし意見を頂きました竹原 正矩氏，川\UTF{7028} 徹也氏，田口 拓明氏，中嶋 航大氏に感謝の意を表します．
