第2添削 M2・B4修正完了

--- a/integration.tex
+++ b/integration.tex
@@ -4,7 +4,7 @@
 
 これまでに説明してきた手法の中で，検索性能の向上に有効な結果を示したものを統合し，検索精度の更なる向上を図る．検索性能の向上に有効な結果を示したものとして，論文の利用・Kaldiを用いた検索文書の利用・キャッシュモデル・前後の部分文書の情報を加味の手法があり，これらを統合し，検索精度の変化を分析する．
 
-\subsection{実験条件}
+\section{実験条件}
 実験条件を表\ref{t_ex_patern}に示す．
 
 \begin{table}[h]
@@ -17,7 +17,7 @@
 基本的に，論文の利用とKaldiを用いた検索文書を用い，条件(1) クエリ尤度モデルのみ, 条件(2) キャッシュモデルの2つの条件について，変化させたときのMAP値を算出する．
 また，2つの条件のそれぞれに対し，前後の部分文書の情報を加味をした4つの条件について比較，分析した．
 
-\subsection{実験結果}
+\section{実験結果}
 
 \begin{table}[htbp]
     \centering
