--- a/main.tex
+++ b/main.tex
@@ -229,11 +229,11 @@ Proc. 21st Annual International ACM SIGIR conference on Research and Development
 \url{http://chasen-legacy.sourceforge.jp/}
 
 \bibitem{julius}
-汎用大語彙連続音声認識エンジン
+汎用大語彙連続音声認識エンジン Julius
 \url{http://julius.sourceforge.jp/}
 
 \bibitem{kaldi}
-音声認識の統合的なツールキット
+音声認識の統合的なツールキット Kaldi
 \url{http://kaldi.sourceforge.net/}
 
 \bibitem{csj}
@@ -265,6 +265,11 @@ Kiichi Hasegawa, Masanori Takehara, Satoshi Tamura, Satoru Hayamizu, Spoken docu
 
 \bibitem{kanetera}
 金寺 登, 長田 忠良, シーン間音声情報内容検索, 日本音響学会, 1-2-9, 2015
+
+\bibitem{mikolov}
+Tomas Mikolov, Anoop Deoras, Stefan Kombrink, Lukas Burget, Jan Honza Cernocky, Empirical Evaluation and Combination of Advanced Language Modeling Techniques, Department of Electrical and Computer Engineering, Johns Hopkins University, USA, 2011
+
+
 
 % \bibitem{BM25}
 % S. Robertson and H. Zaragoza, 
