発表文献の作成

--- a/main.tex
+++ b/main.tex
@@ -221,23 +221,23 @@ Proc. 21st Annual International ACM SIGIR conference on Research and Development
 
 % MeCab
 \bibitem{MeCab}
-形態素解析エンジン MeCab
+形態素解析エンジン MeCab \\
 \url{http://mecab.googlecode.com/svn/trunk/mecab/doc/index.html}
 
 \bibitem{ChaSen}
-形態素解析器
+形態素解析器 \\
 \url{http://chasen-legacy.sourceforge.jp/}
 
 \bibitem{julius}
-汎用大語彙連続音声認識エンジン Julius
+汎用大語彙連続音声認識エンジン Julius \\
 \url{http://julius.sourceforge.jp/}
 
 \bibitem{kaldi}
-音声認識の統合的なツールキット Kaldi
+音声認識の統合的なツールキット Kaldi \\
 \url{http://kaldi.sourceforge.net/}
 
 \bibitem{csj}
-前川喜久男, 籠宮隆之, 小磯花絵, 小椋秀樹, 菊池英明, 日本語話し言葉コーパスの設計, 音声研究, 第4巻第2号, pp.51-61 (2000)
+前川喜久男, 籠宮隆之, 小磯花絵, 小椋秀樹, 菊池英明, 日本語話し言葉コーパスの設計, 音声研究, 第4巻第2号, pp.51-61, 2000
                                                                                                                                                                                                                                                                                                                                                                                                                                                             
 
 % % 線形補完
