--- a/mypaper.tex
+++ b/mypaper.tex
@@ -14,10 +14,18 @@
 % Confidence estimation and keyword extraction from speech recognition result based on Web information, \\
 % In proceedings of APSIPA 2013
 
-% \bibitem{ntcir}
-% K. Hara, H. Taguchi, K. Nakajima, M.Takehara, S.Tamura, S.Hayamizu, \\
-% Segmented spoken document retrieval using word co-occurrence information, \\
-% In proceedings of NTCIR11, 2014
+\bibitem{a}
+田口　拓明, 田村 哲嗣,	 速水 悟, 商品レビューを用いたプレゼント支援の検討, 2014年度 人工知能学会全国大会(第28回), 2014
 
-    
+\bibitem{ntcir}
+K. Hara, H. Taguchi, K. Nakajima, M.Takehara, S.Tamura, S.Hayamizu, \\
+Segmented spoken document retrieval using word co-occurrence information, \\
+In proceedings of NTCIR11, 2014
+
+\bibitem{c}
+田口　拓明, 田村 哲嗣,	 速水 悟, 音声ドキュメント検索における関連文書を用いたクエリと検索文書の拡張, 日本音響学会 2015年秋季研究発表会, 2015
+
+\bibitem{b}
+田口　拓明, 田村 哲嗣,	 速水 悟, 音声ドキュメント検索における関連文書を用いた検索精度の向上, 平成27年度 電気・電子・情報関係学会 東海支部連合大会, 2015
+   
 \end{thebibliography}
