音声文書を音声ドキュメントに一括置換

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%
 % chapter2からのコピペ
 %
-\chapter{音声文書中の認識誤り単語の棄却手法}
+\chapter{音声ドキュメント中の認識誤り単語の棄却手法}
 
 音声認識結果には音声認識誤りが含まれる．これらの認識誤りは，その後の特徴量計算の段階で悪影響を及ぼし，
 最終的に文書検索精度を劣化させる原因となる．
