--- a/thanks.tex
+++ b/thanks.tex
@@ -17,7 +17,7 @@
 % 特にNTCIRプロジェクトのタスク参加者として実験プログラムの開発，及び修正を手伝い，実験の協力をして頂きました田口 拓明氏，
 % 同じく実験の協力をして頂きました中嶋 航大氏には，より一層の感謝の意を表します．
 % % 長谷川先輩
-% また音声文書検索の研究の先駆者であるOBの長谷川 貴一氏には，多忙の中研究室にお越し頂き，
+% また音声ドキュメント検索の研究の先駆者であるOBの長谷川 貴一氏には，多忙の中研究室にお越し頂き，
 % 文書検索に関する多くのアドバイスを頂きました．ここに感謝の意を表します．\\
 
 % % 研究室5階メンバー
