速水先生の指摘されたところ修正

--- a/feature.tex
+++ b/feature.tex
@@ -7,10 +7,9 @@
 % 周囲の言語を含めた特徴量を含めた
 
 % TODO: 参考文献 音響学会15 金寺
-NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS Retrieval条件では，検索対象の文書に対し，周囲の文書を利用すると検索精度が向上する事が報告されている．金寺ら\cite{kanetera}は音声内容検索において，検索対象文書の周囲に存在する文書に対し，シーンべクトルの線形補間を用いて音
-声情報検索を行った結果，
-検索性能が高いことが報告されている． 
-
+NTCIR11 SpokenQuery\&Doc Formal-run の SQSCR SGS Retrieval条件では，検索対象の文書に対し，周囲の文書を利用すると検索精度が向上する事を報告している．
+% 金寺ら\cite{kanetera}は音声内容検索において，検索対象文書の周囲に存在する文書に対し，シーンべクトルの線形補間を用いて音声情報検索を行った結果，検索性能が高いことが報告されている． 
+Nanjoら\cite{nanjo}は,検索対象を15発話単位, 30発話単位, 60発話単位, 全体の重み付き線形和によって検索べクトルを構成し, 検索精度に対し，良好な結果を得ている．
 そこで本研究では，クエリ尤度を用いた検索モデルに対し，検索対象の周囲の単語を考慮することで，検索精度を改善する事を考案する．
 
 % クエリ尤度と拡張
