--- a/main.tex
+++ b/main.tex
@@ -263,8 +263,11 @@ from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
 \bibitem{hasegawa}
 Kiichi Hasegawa, Masanori Takehara, Satoshi Tamura, Satoru Hayamizu, Spoken document retrieval using extended query model and web documents, Proceeding of the 10th NTCIR Conference, June 18-21, 2013
 
-\bibitem{kanetera}
-金寺 登, 長田 忠良, シーン間音声情報内容検索, 日本音響学会, 1-2-9, 2015
+% \bibitem{kanetera}
+% 金寺 登, 長田 忠良, シーン間音声情報内容検索, 日本音響学会, 1-2-9, 2015
+
+\bibitem{nanjo}
+H. Nanjo et al., Interspeech, pp.1285-1288, 2010
 
 \bibitem{mikolov}
 Tomas Mikolov, Anoop Deoras, Stefan Kombrink, Lukas Burget, Jan Honza Cernocky, Empirical Evaluation and Combination of Advanced Language Modeling Techniques, Department of Electrical and Computer Engineering, Johns Hopkins University, USA, 2011
