文脈を考慮した言語特徴量の検討追記

--- a/main.tex
+++ b/main.tex
@@ -272,6 +272,8 @@ H. Nanjo et al., Interspeech, pp.1285-1288, 2010
 \bibitem{mikolov}
 Tomas Mikolov, Anoop Deoras, Stefan Kombrink, Lukas Burget, Jan Honza Cernocky, Empirical Evaluation and Combination of Advanced Language Modeling Techniques, Department of Electrical and Computer Engineering, Johns Hopkins University, USA, 2011
 
+\bibitem{bigram}
+F. Song and W.B. Croft, A general language model for information retrieval, Proc.CIKM 1999, pp.316–321, 1999.
 
 
 % \bibitem{BM25}
