最終修正完了

--- a/integration.tex
+++ b/integration.tex
@@ -22,10 +22,11 @@
 \begin{table}[htbp]
     \centering
     \caption{提案手法を統合したときのMAP値}
-    \includegraphics[width=5cm]{./image/t_integration4.png}
+    \includegraphics[width=5cm]{./image/t_integration4_1.png}
     \label{t_integration}
 \end{table}
 
-実験を行った結果を表\ref{t_integration}に示す．表\ref{t_integration}から，条件(1)と条件(2)において，それぞれに前後の部分文書の情報を加味した場合，MAP値は大幅に改善した．しかし，条件(2)は，条件(1)よりMAP値が大きいにも関わらず，前後の部分文書情報を加味した条件(4)は条件(3)よりもMAP値が大きくならなかった．これは，キャッシュモデルがすでに検索対象文書の出現場所以前の情報を保持しているため，前後の部分文書情報を加味した場合に重複した特徴量となってしまい，MAP値が低下するのではないかと考えられる．
+実験を行った結果を表\ref{t_integration}に示す．表\ref{t_integration}から，条件(1)・(2)と条件(3)・(4)より
+，それぞれに前後の部分文書の情報を加味した場合，MAP値は大幅に改善した．しかし，条件(2)は，条件(1)よりMAP値が大きいにも関わらず，前後の部分文書情報を加味した条件(4)は条件(3)よりもMAP値が大きくならなかった．これは，キャッシュモデルがすでに検索対象文書の出現場所以前の情報を保持しているため，前後の部分文書情報を加味した場合に重複した特徴量となってしまい，MAP値が低下するのではないかと考えられる．
 
 % TODO: パラメータの説明もメモしといた方が良い
