--- a/thanks.tex
+++ b/thanks.tex
@@ -10,6 +10,7 @@
 田村 哲嗣助教には，研究の方針はもちろんのこと，研究の進捗に気を配って頂きました．
 お二人のバックアップがなければ，本稿をまとめられることはありませんでした．
 
+また，当研究にご協力いただいた速水・田村研究室のメンバーである竹原正矩氏，加島卓磨氏，川嶋大義氏，絹田卓也氏，臼田寛明氏，野尻弘也氏，鵜飼和渡氏，中嶋航大氏，朝日翔太氏，小川和晃氏，小島聖司氏，丹羽高大氏，藤原正希氏，松井智哉氏，宮崎晃一氏，村橋達明氏，山田詩織氏に感謝の意を捧げます．
 
 % % 研究に深く関わってくれた人
 % 次に研究の過程で，度々議論を交わし意見を頂きました竹原 正矩氏，川\UTF{7028} 徹也氏，田口 拓明氏，中嶋 航大氏に感謝の意を表します．
