--- a/main.tex
+++ b/main.tex
@@ -248,7 +248,7 @@ Proc. 21st Annual International ACM SIGIR conference on Research and Development
 % ディリクレスムージング
 \bibitem{smoothing2}
 F. Jelinek and R.L. Mercer, Interpolated estimation of markov source parameters
-from sparse data, Pattern Recognition in Practice, pp.381–397, 1980.
+from sparse data, Pattern Recognition in Practice, pp.381-397, 1980.
 
 
 % % knear ney
@@ -273,7 +273,7 @@ H. Nanjo et al., Interspeech, pp.1285-1288, 2010
 Tomas Mikolov, Anoop Deoras, Stefan Kombrink, Lukas Burget, Jan Honza Cernocky, Empirical Evaluation and Combination of Advanced Language Modeling Techniques, Department of Electrical and Computer Engineering, Johns Hopkins University, USA, 2011
 
 \bibitem{bigram}
-F. Song and W.B. Croft, A general language model for information retrieval, Proc.CIKM 1999, pp.316–321, 1999.
+F. Song and W.B. Croft, A general language model for information retrieval, Proc.CIKM 1999, pp.316-321, 1999.
 
 
 % \bibitem{BM25}
